@@ -1,0 +1,3 @@
+MD5 30cacd32e23abdd280bcfdcafd933671 kgtk-0.5.1.tar.gz 581480
+RMD160 8d4093035d0ea9f7c912ed06037237f97f68f9b1 kgtk-0.5.1.tar.gz 581480
+SHA256 fe8f7428d73007afd48b5dcf10dd4756abcc6ca4fc0d274f04fbc6973e6cad60 kgtk-0.5.1.tar.gz 581480
