@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/kgtk
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/kgtk/ChangeLog,v 1.1 2006/05/05 16:38:38 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/kgtk/ChangeLog,v 1.2 2006/05/07 16:42:59 genstef Exp $
+
+*kgtk-0.5.1 (07 May 2006)
+
+  07 May 2006; Stefan Schweizer <genstef@gentoo.org> -kgtk-0.5.ebuild,
+  +kgtk-0.5.1.ebuild:
+  version bump
 
 *kgtk-0.5 (05 May 2006)
 
